# alias

./: .gitignore  LICENSE.md  README.md  alias.bat  alias.py  readme.md  setup.cfg  setup.py  setup.reg
src/alias/: __init__.py  alias.py
