[bdist_wheel]
universal = 1

[metadata]
name = alias-windows
version = attr: alias.__version__
license = MIT
license_file = LICENSE.md
description = Manage command aliases in Windows
long_description = file: README.md
long_description_content_type = text/markdown
author = alexesprit
url = https://github.com/alexesprit/alias
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir=
    =src
packages = find:

python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    alias = alias.alias:main
